WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
314808
REGRESSION(
313207@main
?): http/tests/ssl/applepay/ApplePayButton.html is a flaky crash
https://bugs.webkit.org/show_bug.cgi?id=314808
Summary
REGRESSION(313207@main?): http/tests/ssl/applepay/ApplePayButton.html is a fl...
Abrar Rahman Protyasha
Reported
2026-05-14 03:11:36 PDT
Here's a crash log from an EWS run in a later PR:
https://ews-build.s3-us-west-2.amazonaws.com/macOS-Tahoe-Debug-WK2-Tests-EWS/1710f3ca-30092/http/tests/ssl/applepay/ApplePayButton-crash-log.txt
Notice that the crash looks like: ``` IPC::MessageReceiver::~MessageReceiver() Inspector::ProxyingNetworkAgent::~ProxyingNetworkAgent() ... WebKit::WebPageInspectorController::~WebPageInspectorController() WebKit::WebPageProxy::~WebPageProxy() -[WKWebView .cxx_destruct] -[TestRunnerWKWebView dealloc] ``` Which seems oddly like a destruction backtrace originating from the code introduced in
313207@main
(where ProxyingNetworkAgent inherited IPC::MessageReceiver)
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-05-14 03:11:42 PDT
<
rdar://problem/177056433
>
Blaze Burg
Comment 2
2026-05-14 21:50:04 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/64973
EWS
Comment 3
2026-05-15 11:22:28 PDT
Committed
313318@main
(04f8f8e8059d): <
https://commits.webkit.org/313318@main
> Reviewed commits have been landed. Closing PR #64973 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug