Source/WebKit/UIProcess/Inspector/WebPageInspectorController.h
@@ -88,7 +88,7 @@ public:
     void willDestroyFrame(const WebFrameProxy&);
     void didCreateProvisionalFrame(ProvisionalFrameProxy&);
     void willDestroyProvisionalFrame(const ProvisionalFrameProxy&);
-    void didCommitProvisionalFrame(WebFrameProxy&, WebCore::ProcessIdentifier oldProcessID, WebCore::ProcessIdentifier newProcessID);
+    void didCommitProvisionalFrame(WebFrameProxy&, WebCore::ProcessIdentifier oldProcessID, std::optional<WebCore::PageIdentifier> oldPageID, WebCore::ProcessIdentifier newProcessID);
 
     InspectorBrowserAgent* NODELETE enabledBrowserAgent() const;
     void setEnabledBrowserAgent(InspectorBrowserAgent*);
